--- a/persistent-volumes/pv-20MB-nfs.yaml
+++ b/persistent-volumes/pv-20MB-nfs.yaml
@@ -10,4 +10,4 @@ spec:
   persistentVolumeReclaimPolicy: Recycle
   nfs:
     server: 10.0.207.101  
-    path: "/vol_20mb_file"
+    path: "/trident_vol_20mb_file"
