--- a/volumes/pod-nginx-mixedvols.yaml
+++ b/volumes/pod-nginx-mixedvols.yaml
@@ -15,7 +15,7 @@ spec:
       - name: vol20mb
         nfs:
           server: 10.0.207.101  
-          path: "/vol_20mb_file"
+          path: "/trident_vol_20mb_file"
       - name: scratch
         emptyDir: {}
         
